# SALES_PIPELINES

./: .gitignore  FULL_DATA_FINAL.csv  Lead Research Agent Handoff.docx  config.py  main.py  outreach_system_spec.docx  pyproject.toml  run_onyx_kimi.py  spec.txt  spec_utf8.txt  test_kimi.py
.netlify/: netlify.toml  state.json
data/: crawl4ai_output.md  debug_search_reviews.html  leads.csv  test_lead.csv
demos/: nightjar_coffee_roasters_demo.html  verve_coffee_roasters_demo.html
leads/: leads.csv
modules/: deploy.py  generate.py  host.py  ingest.py  send.py  utils.py
src/config/: columns.py  models.py
src/custom_agents/: __init__.py  demo_agent.py  outreach_agent.py  research_agent.py
src/deploy/: netlify.py
src/tools/: exa_tool.py  google_places_tool.py  maps_scraper.py  page_fetch.py  search_tools.py  searchapi_tool.py  serper_tool.py  tavily_tool.py
template/: index.html  style.css
templates/: coffee_app.html  salon_app.html
