[project]
name = "sales-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.6",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "requests>=2.33.1",
]
